pixel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nvidia-service
  namespace: nvidia-pixel
spec:
  type: ExternalName
  externalName: 192.168.5.144
  ports:
    - port: 80
      targetPort: 8000
